--- a/scripts/package.json
+++ b/scripts/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@scure/bip32": "^2.0.1",
     "@scure/bip39": "^2.0.1",
+    "cocod": "^0.1.0",
     "nostr-tools": "^2.10.0",
     "ws": "^8.18.0"
   }
